# scipy-stubs

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.toml
.github/workflows/: ci.yml
